--- a/WebContent/administrador/administrador.html
+++ b/WebContent/administrador/administrador.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
-<meta charset="ISO-8859-1">
-<title>Perfil do administrador</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Perfil do administrador</title>
+	<link rel="stylesheet" type="text/css" href="../resources/css/bootstrap.min.css">
+	<script src="../resources/js/angular.min.js"></script>
+	<script src="../resources/js/jquery.min.js"></script>
+	<script src="../resources/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+	<div ng-include="'menuAdministrador.html'"></div>
 </body>
 </html>
