Apontamento das páginas html para os controladores js

--- a/WebContent/listar/modalidade.html
+++ b/WebContent/listar/modalidade.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="modalidadeModule">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Listar modalidades</title>
