--- a/WebContent/cadastrar/atividade.html
+++ b/WebContent/cadastrar/atividade.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="atividadeModule">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Cadastrar atividade</title>
