--- a/WebContent/listar/administrador.html
+++ b/WebContent/listar/administrador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="administradorModule">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Listar administradores</title>
