--- a/WebContent/listar/aluno.html
+++ b/WebContent/listar/aluno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="alunoModule">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Cadastrar administrador</title>
