--- a/WebContent/listar/curso.html
+++ b/WebContent/listar/curso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="cursoModule">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Listar cursos</title>
