--- a/WebContent/administrador/menuAdministrador.html
+++ b/WebContent/administrador/menuAdministrador.html
@@ -16,7 +16,7 @@
 			        <span class="sr-only">Toggle navigation</span>
 			        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 			    </button>
-		      	<a class="navbar-brand" href="../index.html">Atividades complementares</a>
+		      	<a class="navbar-brand" href="../administrador/administrador.html">Atividades complementares</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
