--- a/WebContent/cadastrar/atividade.html
+++ b/WebContent/cadastrar/atividade.html
@@ -7,8 +7,9 @@
 	<script src="../resources/js/angular.min.js"></script>
 	<script src="../resources/js/jquery.min.js"></script>
 	<script src="../resources/js/bootstrap.min.js"></script>
+	<script src="../resources/controll/atividade.js"></script>
 </head>
-<body>
+<body ng-controller="atividadeController">
 	<div ng-include="'../administrador/menuAdministrador.html'"></div>
 	<div ng-include="'../administrador/opcoes.html'"></div>
 </body>
