--- a/WebContent/cadastrar/ppc.html
+++ b/WebContent/cadastrar/ppc.html
@@ -7,7 +7,7 @@
 	<script src="../resources/js/angular.min.js"></script>
 	<script src="../resources/js/jquery.min.js"></script>
 	<script src="../resources/js/bootstrap.min.js"></script>
-	<script src="../resources/controll/ppc.js"></script>
+	<script src="../resources/control/ppc.js"></script>
 </head>
 <body ng-controller="ppcController">
 	<div ng-include="'../administrador/menuAdministrador.html'"></div>
