--- a/WebContent/alterar/atividade.html
+++ b/WebContent/alterar/atividade.html
@@ -12,7 +12,7 @@
 	<script src="../resources/control/atividade.js"></script>
 </head>
 <body ng-controller="atividadeController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
