--- a/WebContent/alterar/modalidade.html
+++ b/WebContent/alterar/modalidade.html
@@ -12,7 +12,68 @@
 	<script src="../resources/control/modalidade.js"></script>
 </head>
 <body ng-controller="modalidadeController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Alteração de modalidades</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="modalidadeForm" ng-submit="modalidadeForm.$valid && salvar()" novalidate>
+				<br>
+					<span ng-repeat="mensagem in mensagens">{{mensagem}}<br></span>
+					<div ng-show="modalidadeForm.$submitted">
+						<div ng-show="modalidadeForm.nome.$error.required">Preencha o nome</div>
+						<div ng-show="modalidadeForm.nome.$error.minlength">O nome precisa ter ao menos 10 caracteres</div>
+						<div ng-show="modalidadeForm.nome.$error.maxlength">O nome precisa ter até 40 caracteres</div>
+						<div ng-show="modalidadeForm.ativo.$error.required">Informe o estado</div>
+					</div>
+				<br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="modalidade.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" disabled>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="modalidade.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="10" ng-maxlength="40" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="modalidade.ativo" required>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+						<button type="submit" class="btn btn-success">Salvar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Modalidades cadastradas</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar modalidades">
+				<br>
+				<table class="table table-condensed">
+					<th>Nome</th><th>Estado</th>
+					<tr ng-repeat="modalidade in modalidades | filter:criterio" ng-click="seleciona(modalidade)">
+						<td>{{modalidade.nome}}</td>
+						<td>{{modalidade.ativo}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
