--- a/WebContent/alterar/ppc.html
+++ b/WebContent/alterar/ppc.html
@@ -12,7 +12,7 @@
 	<script src="../resources/control/ppc.js"></script>
 </head>
 <body ng-controller="ppcController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
