--- a/WebContent/cadastrar/administrador.html
+++ b/WebContent/cadastrar/administrador.html
@@ -12,7 +12,74 @@
 	<script src="../resources/control/administrador.js"></script>
 </head>
 <body ng-controller="administradorController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Cadastro de administradores</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="administradorForm" ng-submit="administradorForm.$valid && salvar()" novalidate>
+				<br>
+					<span ng-repeat="mensagem in mensagens">{{mensagem}}<br></span>
+					<div ng-show="administradorForm.$submitted">
+						<div ng-show="administradorForm.nome.$error.required">Preencha o nome</div>
+						<div ng-show="administradorForm.nome.$error.minlength">O nome precisa ter ao menos 10 caracteres</div>
+						<div ng-show="administradorForm.nome.$error.maxlength">O nome precisa ter até 50 caracteres</div>
+						<div ng-show="administradorForm.email.$error.required">Preencha o email</div>
+						<div ng-show="administradorForm.senha.$error.required">Preencha senha</div>
+						<div ng-show="administradorForm.siape.$error.required">Preencha o siape</div>
+						<div ng-show="administradorForm.siape.$error.minlength">O siape precisa ter ao menos 5 caracteres</div>
+						<div ng-show="administradorForm.siape.$error.maxlength">O siape precisa ter até 20 caracteres</div>
+						<div ng-show="administradorForm.ativo.$error.required">Informe o estado</div>
+					</div>
+				<br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="administrador.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" disabled>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="administrador.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="10" ng-maxlength="50" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEmai" class="col-sm-1 control-label">Email</label>
+					<div class="col-sm-5">
+						<input type="email" name="email" ng-model="administrador.email" class="form-control" id="inputEmail" placeholder="Email" required>
+					</div>
+					<label for="inputSenha" class="col-sm-1 control-label">Senha</label>
+					<div class="col-sm-5">
+						<input type="password" name="senha" ng-model="administrador.senha" class="form-control" id="inputPassword" placeholder="Senha" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputSiape" class="col-sm-1 control-label">Siape</label>
+					<div class="col-sm-8">
+						<input type="text" name="siape" ng-model="administrador.siape" class="form-control" id="inputSiape" placeholder="Siape" ng-minlength="5" ng-maxlength="20" required>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="administrador.ativo" required>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputObservacoes" class="col-sm-1 control-label">Observações</label>
+					<div class="col-sm-11">
+						<textarea class="form-control" ng-model="administrador.observacoes" rows="5"></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="submit" class="btn btn-success">Salvar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
