--- a/WebContent/cadastrar/lancamento.html
+++ b/WebContent/cadastrar/lancamento.html
@@ -12,7 +12,7 @@
 	<script src="../resources/control/lancamento.js"></script>
 </head>
 <body ng-controller="lancamentoController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
