--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div ng-include="'menu.html'"></div>
-	
+	<img src="resources/img/logo.png" class="img-responsive" alt="Responsive image" width="50%" height="50%">
 	<div ng-include="'rodape.html'"></div>
 </body>
 </html>
