--- a/WebContent/listar/administrador.html
+++ b/WebContent/listar/administrador.html
@@ -12,7 +12,81 @@
 	<script src="../resources/control/administrador.js"></script>
 </head>
 <body ng-controller="administradorController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Lista de administradores</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="administradorForm" ng-submit="administradorForm.$valid && salvar()" novalidate>
+				<br><br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="administrador.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="administrador.nome" class="form-control" id="inputNome" placeholder="Nome" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEmai" class="col-sm-1 control-label">Email</label>
+					<div class="col-sm-5">
+						<input type="email" name="email" ng-model="administrador.email" class="form-control" id="inputEmail" placeholder="Email" readonly>
+					</div>
+					<label for="inputSenha" class="col-sm-1 control-label">Senha</label>
+					<div class="col-sm-5">
+						<input type="password" name="senha" ng-model="administrador.senha" class="form-control" id="inputPassword" placeholder="Senha" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputSiape" class="col-sm-1 control-label">Siape</label>
+					<div class="col-sm-8">
+						<input type="text" name="siape" ng-model="administrador.siape" class="form-control" id="inputSiape" placeholder="Siape" readonly>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="administrador.ativo" disabled>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputObservacoes" class="col-sm-1 control-label">Observações</label>
+					<div class="col-sm-11">
+						<textarea class="form-control" ng-model="administrador.observacoes" rows="5" readonly></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Administradores cadastrados</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar administradores">
+				<br>
+				<table class="table table-condensed">
+					<th>Nome</th><th>Email</th><th>Siape</th><th>Estado</th>
+					<tr ng-repeat="administrador in administradores | filter:criterio" ng-click="seleciona(administrador)">
+						<td>{{administrador.nome}}</td>
+						<td>{{administrador.email}}</td>
+						<td>{{administrador.siape}}</td>
+						<td>{{administrador.ativo}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
