--- a/WebContent/listar/aluno.html
+++ b/WebContent/listar/aluno.html
@@ -12,7 +12,103 @@
 	<script src="../resources/control/aluno.js"></script>
 </head>
 <body ng-controller="alunoController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Lista de alunos</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="alunoForm" ng-submit="alunoForm.$valid && salvar()" novalidate>
+				<br><br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="aluno.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="aluno.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="10" ng-maxlength="50" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEmail" class="col-sm-1 control-label">Email</label>
+					<div class="col-sm-5">
+						<input type="text" name="email" ng-model="aluno.email" class="form-control" id="inputEmail" placeholder="Email" readonly>
+					</div>
+					<label for="inputSenha" class="col-sm-1 control-label">Senha</label>
+					<div class="col-sm-5">
+						<input type="password" name="senha" ng-model="aluno.senha" class="form-control" id="inputSenha" placeholder="Senha" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputTotalHoras" class="col-sm-1 control-label">Total Horas</label>
+					<div class="col-sm-2">
+						<input type="number" name="totalHoras" ng-model="aluno.totalHoras" class="form-control" id="inputTotalHoras" placeholder="Total horas" readonly>
+					</div>
+					<label for="inputHorasAproveitadas" class="col-sm-2 control-label">Horas Aproveitadas</label>
+					<div class="col-sm-2">
+						<input type="number" name="horasAproveitadas" ng-model="aluno.horasAproveitadas" class="form-control" id="inputHorasAproveitadas" placeholder="Horas aproveitadas" readonly>
+					</div>
+					<label for="inputAprovado" class="col-sm-1 control-label">Aprovado</label>
+					<div class="col-sm-4">
+						<select class="form-control" name="aprovado" ng-model="aluno.aprovado" disabled>
+							<option value="APROVADO">APROVADO</option>
+							<option value="NAO_APROVADO">NÃO APROVADO</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputCpf" class="col-sm-1 control-label">CPF</label>
+					<div class="col-sm-3">
+						<input type="text" name="cpf" ng-model="aluno.cpf" class="form-control" id="inputCpf" placeholder="CPF" ng-minlength="11" ng-maxlength="11" readonly>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="aluno.ativo" disabled>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+					<label for="inputTurma" class="col-sm-1 control-label">Turma</label>
+					<div class="col-sm-4">
+						<select class="form-control" ng-model="aluno.turma" ng-options="turma.nome for turma in turmas track by turma.codigo" disabled>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputObservacoes" class="col-sm-1 control-label">Observações</label>
+					<div class="col-sm-11">
+						<textarea class="form-control" ng-model="aluno.observacoes" rows="5" readonly></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Alunos cadastrados</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar alunos">
+				<br>
+				<table class="table table-condensed">
+					<th>Nome</th><th>Total horas</th><th>Horas aproveitadas</th><th>Curso</th>
+					<tr ng-repeat="aluno in alunos | filter:criterio" ng-click="seleciona(aluno)">
+						<td>{{aluno.nome}}</td>
+						<td>{{aluno.totalHoras}}</td>
+						<td>{{aluno.horasAproveitadas}}</td>
+						<td>{{aluno.turma.ppc.curso.nome}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
