--- a/WebContent/listar/curso.html
+++ b/WebContent/listar/curso.html
@@ -12,7 +12,64 @@
 	<script src="../resources/control/curso.js"></script>
 </head>
 <body ng-controller="cursoController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Lista de cursos</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="cursoForm" ng-submit="cursoForm.$valid && salvar()" novalidate>
+				<br><br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="curso.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="curso.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="20" ng-maxlength="50" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="curso.ativo" disabled>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Administrador</label>
+					<div class="col-sm-8">
+						<select class="form-control" ng-model="curso.administrador" ng-options="administrador.nome for administrador in administradores track by administrador.codigo" disabled>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Cursos cadastrados</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar cursos">
+				<br>
+				<table class="table table-condensed">
+					<th>Nome</th><th>Administrador</th>
+					<tr ng-repeat="curso in cursos | filter:criterio" ng-click="seleciona(curso)">
+						<td>{{curso.nome}}</td>
+						<td>{{curso.administrador.nome}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
