--- a/WebContent/listar/turma.html
+++ b/WebContent/listar/turma.html
@@ -12,7 +12,7 @@
 	<script src="../resources/control/turma.js"></script>
 </head>
 <body ng-controller="turmaController">
-	<div ng-include="'../util/menu.html'"></div>
+	<div ng-include="'../menu.html'"></div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
