--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -67,8 +67,8 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							Relatorio<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-				            <li><a href="">Aluno</a></li>
-				            <li><a href="">Turma</a></li>
+				            <li><a href="http://localhost:8080/AtividadesComplementares/relatorios/aluno.html">Aluno</a></li>
+				            <li><a href="http://localhost:8080/AtividadesComplementares/relatorios/turma.html">Turma</a></li>
 			          	</ul>
 					</li>
 					
