--- a/WebContent/listar/atividade.html
+++ b/WebContent/listar/atividade.html
@@ -13,6 +13,80 @@
 </head>
 <body ng-controller="atividadeController">
 	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Lista de atividades</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="atividadeForm" ng-submit="atividadeForm.$valid && salvar()" novalidate>
+				<br>
+				<br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="atividade.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
+					</div>
+					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
+					<div class="col-sm-8">
+						<input type="text" name="nome" ng-model="atividade.nome" class="form-control" id="inputNome" placeholder="Nome" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputObservacoes" class="col-sm-1 control-label">Descrição</label>
+					<div class="col-sm-11">
+						<textarea class="form-control" name="descricao" ng-model="atividade.descricao" rows="5" readonly></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputPorcentagem" class="col-sm-1 control-label">Aproveitamento</label>
+					<div class="col-sm-2">
+						<input type="number" name="porcentagem" ng-model="atividade.porcentagem" class="form-control" id="inputPorcentagem" placeholder="Aproveitamento" readonly>
+					</div>
+					<label for="inputporcentagemAproveitadaPorAtividade" class="col-sm-3 control-label">Aproveitamento por atividade</label>
+					<div class="col-sm-3">
+						<input type="number" name="porcentagemAproveitadaPorAtividade" ng-model="atividade.porcentagemAproveitadaPorAtividade" class="form-control" id="inputporcentagemAproveitadaPorAtividade" placeholder="Aproveitamento por atividade" readonly>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="atividade.ativo" disabled>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEstado" class="col-sm-1 control-label">Modalidade</label>
+					<div class="col-sm-4">
+						<select class="form-control" ng-model="atividade.modalidade" ng-options="modalidade.nome for modalidade in modalidades track by modalidade.codigo" disabled>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Atividades cadastradas</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar cursos">
+				<br>
+				<table class="table table-condensed">
+					<th>Nome</th><th>Modalidade</th>
+					<tr ng-repeat="atividade in atividades | filter:criterio" ng-click="seleciona(atividade)">
+						<td>{{atividade.nome}}</td>
+						<td>{{atividade.modalidade.nome}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
