--- a/WebContent/relatorios/aluno.html
+++ b/WebContent/relatorios/aluno.html
@@ -2,7 +2,7 @@
 <html ng-app="alunoModule">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Alterar aluno</title>
+	<title>Relatório alunos</title>
 	<link rel="stylesheet" type="text/css" href="../resources/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../resources/css/sticky-footer.css">
 	<script src="../resources/js/angular.min.js"></script>
@@ -15,58 +15,43 @@
 	<div ng-include="'../menu.html'"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Alteração de alunos</h3>
+			<h3 class="panel-title">Lista de alunos</h3>
   		</div>
 		<div class="panel-body">
 			<form class="form-horizontal" name="alunoForm" ng-submit="alunoForm.$valid && salvar()" novalidate>
-				<br>
-					<span ng-repeat="mensagem in mensagens">{{mensagem}}<br></span>
-					<div ng-show="alunoForm.$submitted">
-						<div ng-show="alunoForm.nome.$error.required">Preencha o nome</div>
-						<div ng-show="alunoForm.nome.$error.minlength">O nome precisa ter ao menos 10 caracteres</div>
-						<div ng-show="alunoForm.nome.$error.maxlength">O nome precisa ter até 50 caracteres</div>
-						<div ng-show="alunoForm.email.$error.required">Preencha o email</div>
-						<div ng-show="alunoForm.senha.$error.required">Preencha senha</div>
-						<div ng-show="alunoForm.aprovado.$error.required">Informe a aprovação do aluno</div>
-						<div ng-show="alunoForm.cpf.$error.required">Preencha o cpf</div>
-						<div ng-show="alunoForm.cpf.$error.minlength">O siape precisa ter 11 caracteres</div>
-						<div ng-show="alunoForm.cpf.$error.maxlength">O siape precisa ter 11 caracteres</div>
-						<div ng-show="alunoForm.ativo.$error.required">Informe o estado</div>
-						<div ng-show="alunoForm.turma.$error.required">Informe a turma</div>
-					</div>
-				<br>
+				<br><br>
 				<div class="form-group">
 					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
 					<div class="col-sm-2">
-						<input type="number" name="codigo" ng-model="aluno.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" disabled>
+						<input type="number" name="codigo" ng-model="aluno.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
 					</div>
 					<label for="inputNome" class="col-sm-1 control-label">Nome</label>
 					<div class="col-sm-8">
-						<input type="text" name="nome" ng-model="aluno.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="10" ng-maxlength="50" required>
+						<input type="text" name="nome" ng-model="aluno.nome" class="form-control" id="inputNome" placeholder="Nome" ng-minlength="10" ng-maxlength="50" readonly>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputEmail" class="col-sm-1 control-label">Email</label>
 					<div class="col-sm-5">
-						<input type="text" name="email" ng-model="aluno.email" class="form-control" id="inputEmail" placeholder="Email" required>
+						<input type="text" name="email" ng-model="aluno.email" class="form-control" id="inputEmail" placeholder="Email" readonly>
 					</div>
 					<label for="inputSenha" class="col-sm-1 control-label">Senha</label>
 					<div class="col-sm-5">
-						<input type="password" name="senha" ng-model="aluno.senha" class="form-control" id="inputSenha" placeholder="Senha" required>
+						<input type="password" name="senha" ng-model="aluno.senha" class="form-control" id="inputSenha" placeholder="Senha" readonly>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputTotalHoras" class="col-sm-1 control-label">Total Horas</label>
 					<div class="col-sm-2">
-						<input type="number" name="totalHoras" ng-model="aluno.totalHoras" class="form-control" id="inputTotalHoras" placeholder="Total horas" disabled>
+						<input type="number" name="totalHoras" ng-model="aluno.totalHoras" class="form-control" id="inputTotalHoras" placeholder="Total horas" readonly>
 					</div>
 					<label for="inputHorasAproveitadas" class="col-sm-2 control-label">Horas Aproveitadas</label>
 					<div class="col-sm-2">
-						<input type="number" name="horasAproveitadas" ng-model="aluno.horasAproveitadas" class="form-control" id="inputHorasAproveitadas" placeholder="Horas aproveitadas" disabled>
+						<input type="number" name="horasAproveitadas" ng-model="aluno.horasAproveitadas" class="form-control" id="inputHorasAproveitadas" placeholder="Horas aproveitadas" readonly>
 					</div>
 					<label for="inputAprovado" class="col-sm-1 control-label">Aprovado</label>
 					<div class="col-sm-4">
-						<select class="form-control" name="aprovado" ng-model="aluno.aprovado" required>
+						<select class="form-control" name="aprovado" ng-model="aluno.aprovado" disabled>
 							<option value="APROVADO">APROVADO</option>
 							<option value="NAO_APROVADO">NÃO APROVADO</option>
 						</select>
@@ -75,37 +60,36 @@
 				<div class="form-group">
 					<label for="inputCpf" class="col-sm-1 control-label">CPF</label>
 					<div class="col-sm-3">
-						<input type="text" name="cpf" ng-model="aluno.cpf" class="form-control" id="inputCpf" placeholder="CPF" ng-minlength="11" ng-maxlength="11" required>
+						<input type="text" name="cpf" ng-model="aluno.cpf" class="form-control" id="inputCpf" placeholder="CPF" ng-minlength="11" ng-maxlength="11" readonly>
 					</div>
 					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
 					<div class="col-sm-2">
-						<select class="form-control" name="ativo" ng-model="aluno.ativo" required>
+						<select class="form-control" name="ativo" ng-model="aluno.ativo" disabled>
 							<option value="ATIVO">ATIVO</option>
 							<option value="INATIVO">INATIVO</option>
 						</select>
 					</div>
 					<label for="inputTurma" class="col-sm-1 control-label">Turma</label>
 					<div class="col-sm-4">
-						<select class="form-control" name="turma" ng-model="aluno.turma" ng-options="turma.nome for turma in turmas track by turma.codigo" required>
+						<select class="form-control" ng-model="aluno.turma" ng-options="turma.anoSemestre for turma in turmas track by turma.codigo" disabled>
 						</select>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputObservacoes" class="col-sm-1 control-label">Observações</label>
 					<div class="col-sm-11">
-						<textarea class="form-control" ng-model="aluno.observacoes" rows="5"></textarea>
+						<textarea class="form-control" ng-model="aluno.observacoes" rows="5" readonly></textarea>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-1 col-sm-11">
 						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
-						<button type="submit" class="btn btn-success">Salvar</button>
+						<button type="button" class="btn btn-success" ng-click="geraRelatorio()">Gerar relatório</button>
 					</div>
 				</div>
 			</form>
 		</div>
 	</div>
-	
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">Alunos cadastrados</h3>
