--- a/WebContent/relatorios/turma.html
+++ b/WebContent/relatorios/turma.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="turmaModule">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Listar turmas</title>
+	<link rel="stylesheet" type="text/css" href="../resources/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../resources/css/sticky-footer.css">
+	<script src="../resources/js/angular.min.js"></script>
+	<script src="../resources/js/jquery.min.js"></script>
+	<script src="../resources/js/bootstrap.min.js"></script>
+	<script src="../resources/js/ui-bootstrap-tpls-0.14.1.min.js"></script>
+	<script src="../resources/control/turma.js"></script>
+<body ng-controller="turmaController">
+	<div ng-include="'../menu.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Relatório de turmas</h3>
+  		</div>
+		<div class="panel-body">
+			<form class="form-horizontal" name="turmaForm" ng-submit="turmaForm.$valid && salvar()" novalidate>
+				<br>
+				<br>
+				<div class="form-group">
+					<label for="inputCodigo" class="col-sm-1 control-label">Código</label>
+					<div class="col-sm-2">
+						<input type="number" name="codigo" ng-model="turma.codigo" class="form-control" id="inputCodigo" placeholder="Códgio" readonly>
+					</div>
+					<label for="inputAnoSemestre" class="col-sm-1 control-label">Ano/semestre</label>
+					<div class="col-sm-8">
+						<input type="text" name="anoSemestre" ng-model="turma.anoSemestre" class="form-control" id="inputAnoSemestre" placeholder="Ano/Semestre" readonly>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
+					<div class="col-sm-2">
+						<select class="form-control" name="ativo" ng-model="turma.ativo" disabled>
+							<option value="ATIVO">ATIVO</option>
+							<option value="INATIVO">INATIVO</option>
+						</select>
+					</div>
+					<label for="inputEstado" class="col-sm-1 control-label">Ppc</label>
+					<div class="col-sm-8">
+						<select class="form-control" name="ppc" ng-model="turma.ppc" ng-options="ppc.versao for ppc in ppcs track by ppc.codigo" disabled>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-1 col-sm-11">
+						<button type="button" class="btn btn-success" ng-click="novo()">Limpar</button>
+						<button type="button" class="btn btn-success" ng-click="gerRelatorio()">Gerar relatório</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Turmas cadastradas</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<input type="text" ng-model="criterio" class="form-control" id="inputCriterio" placeholder="Filtrar turmas">
+				<br>
+				<table class="table table-condensed">
+					<th>Ano/Semestre</th><th>Curso</th><th>Ppc</th>
+					<tr ng-repeat="turma in turmas | filter:criterio" ng-click="seleciona(turma)">
+						<td>{{turma.anoSemestre}}</td>
+						<td>{{turma.ppc.curso.nome}}</td>
+						<td>{{turma.ppc.versao}}</td>					
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	<div ng-include="'../rodape.html'"></div>
 </body>
 </html>
