--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -65,6 +65,14 @@
 					
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Calcular<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+				            <li><a href="http://localhost:8080/AtividadesComplementares/calcular/aluno.html">Aluno</a></li>
+				        </ul>
+					</li>
+					
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							Relatorio<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 				            <li><a href="http://localhost:8080/AtividadesComplementares/relatorios/aluno.html">Aluno</a></li>
