--- a/WebContent/alterar/lancamento.html
+++ b/WebContent/alterar/lancamento.html
@@ -26,9 +26,9 @@
 						<div ng-show="lancamentoForm.dataFinalAtividade.$error.required">Preencha a data final da atividade</div>
 						<div ng-show="lancamentoForm.dataLancamento.$error.required">Preencha a data do lançamento</div>
 						<div ng-show="lancamentoForm.horasLancamento.$error.required">Preencha as horas do lançamento</div>
-						<div ng-show="lancamentoForm.horasAproveitadas.$error.required">Preencha as horas aproveitadas</div>
-						<div ng-show="lancamentoForm.horasAproveitadas.$error.min">As horas aproveitadas devem ser inicialmente 0</div>
-						<div ng-show="lancamentoForm.horasAproveitadas.$error.max">As horas aproveitadas devem ser inicialmente 0</div>
+<!-- 						<div ng-show="lancamentoForm.horasAproveitadas.$error.required">Preencha as horas aproveitadas</div> -->
+<!-- 						<div ng-show="lancamentoForm.horasAproveitadas.$error.min">As horas aproveitadas devem ser inicialmente 0</div> -->
+<!-- 						<div ng-show="lancamentoForm.horasAproveitadas.$error.max">As horas aproveitadas devem ser inicialmente 0</div> -->
 						<div ng-show="lancamentoForm.descricao.$error.required">Preencha a descrição do lançamento</div>
 						<div ng-show="lancamentoForm.ativo.$error.required">Informe o estado</div>
 						<div ng-show="lancamentoForm.instituicao.$error.required">Informe a instituição</div>
@@ -48,7 +48,7 @@
 					</div>
 					<label for="inputDataFinalAtividade" class="col-sm-2 control-label">Data final da atividade</label>
 					<div class="col-sm-2">
-						<input type="date" name="dataFinalAtividade" ng-model="lancamento.dataFinalAtividade" class="form-control" id="inputDataFinalAtividade" placeholder="Data da inicio atividade" required>
+						<input type="date" name="dataFinalAtividade" ng-model="lancamento.dataFinalAtividade" class="form-control" id="inputDataFinalAtividade" placeholder="Data da final atividade" required>
 					</div>
 				</div>
 				<div class="form-group">
@@ -62,7 +62,7 @@
 					</div>
 					<label for="inputHorasAproveitadas" class="col-sm-2 control-label">Horas aproveitadas</label>
 					<div class="col-sm-2">
-						<input type="number" name="horasaproveitadas" min="0" max="0" ng-model="lancamento.horasAproveitadas" class="form-control" id="inputHorasAproveitadas" placeholder="Horas aproveitadas" readonly>
+						<input type="number" name="horasaproveitadas" ng-model="lancamento.horasAproveitadas" class="form-control" id="inputHorasAproveitadas" placeholder="Horas aproveitadas" disabled>
 					</div>
 				</div>
 				<div class="form-group">
