Correção de páginas html

--- a/WebContent/alterar/aluno.html
+++ b/WebContent/alterar/aluno.html
@@ -86,7 +86,7 @@
 					</div>
 					<label for="inputTurma" class="col-sm-1 control-label">Turma</label>
 					<div class="col-sm-4">
-						<select class="form-control" name="turma" ng-model="aluno.turma" ng-options="turma.nome for turma in turmas track by turma.codigo" required>
+						<select class="form-control" name="turma" ng-model="aluno.turma" ng-options="turma.anoSemestre for turma in turmas track by turma.codigo" required>
 						</select>
 					</div>
 				</div>
