--- a/WebContent/alterar/ppc.html
+++ b/WebContent/alterar/ppc.html
@@ -15,7 +15,7 @@
 	<div ng-include="'../menu.html'"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Cadastro de ppc</h3>
+			<h3 class="panel-title">Alteração de ppc</h3>
   		</div>
 		<div class="panel-body">
 			<form class="form-horizontal" name="ppcForm" ng-submit="ppcForm.$valid && salvar()" novalidate>
