--- a/WebContent/listar/lancamento.html
+++ b/WebContent/listar/lancamento.html
@@ -15,7 +15,7 @@
 	<div ng-include="'../menu.html'"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Alteração de lançamentos</h3>
+			<h3 class="panel-title">Lista de lançamentos</h3>
   		</div>
 		<div class="panel-body">
 			<form class="form-horizontal" name="lancamentoForm" ng-submit="lancamentoForm.$valid && salvar()" novalidate>
