--- a/WebContent/relatorios/aluno.html
+++ b/WebContent/relatorios/aluno.html
@@ -15,7 +15,7 @@
 	<div ng-include="'../menu.html'"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Relatório dos lançamentos dos alunos</h3>
+			<h3 class="panel-title">Relatório dos lançamentos de um aluno</h3>
   		</div>
 		<div class="panel-body">
 			<form class="form-horizontal" name="alunoForm" ng-submit="alunoForm.$valid && salvar()" novalidate>
