--- a/WebContent/relatorios/turma.html
+++ b/WebContent/relatorios/turma.html
@@ -14,7 +14,7 @@
 	<div ng-include="'../menu.html'"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Relatório dos alunos das turmas</h3>
+			<h3 class="panel-title">Relatório dos alunos de uma turma</h3>
   		</div>
 		<div class="panel-body">
 			<form class="form-horizontal" name="turmaForm" ng-submit="turmaForm.$valid && salvar()" novalidate>
